--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=atefriahi946@gmail.com
+spring.mail.password=twhf mqmz mlww ibye
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.from=atefriahi946@gmail.com
