--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -109,6 +109,11 @@
             <artifactId>layout</artifactId>
             <version>7.1.18</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
 
 
 
