--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,4 +20,5 @@ spring.mail.from=atefriahi946@gmail.com
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
