--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "leaflet-routing-machine": "^3.2.12",
     "@angular/animations": "^16.1.4",
     "@angular/cdk": "^16.1.4",
     "@angular/common": "16.1.4",
@@ -85,10 +86,10 @@
     "sweetalert2": "^11.7.16",
     "three": "^0.166.1",
     "tslib": "^2.6.0",
-    "ngx-pagination": "^6.0.3",
     "zone.js": "^0.13.1"
   },
   "devDependencies": {
+    "@types/leaflet-routing-machine": "^3.2.4",
     "@angular-devkit/build-angular": "^16.1.4",
     "@angular/cli": "^16.1.4",
     "@angular/compiler-cli": "^16.1.4",
