--- a/dashboard/angular.json
+++ b/dashboard/angular.json
@@ -52,7 +52,7 @@
               "./node_modules/ngx-toastr/toastr-old.css"
             ],
             "scripts": [
-             
+             "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
